--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   mobile_scanner: ^5.2.3
   path_provider: ^2.1.5
   share_plus: ^10.0.2
+  supabase_flutter: ^2.8.0
 
 dev_dependencies:
   flutter_test:
